--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>719</width>
-    <height>769</height>
+    <width>720</width>
+    <height>731</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -20,24 +20,45 @@
    <string>Setup</string>
   </property>
   <property name="windowIcon">
-   <iconset>
+   <iconset resource="resources.qrc">
     <normaloff>:/images/CS_icon.png</normaloff>:/images/CS_icon.png</iconset>
   </property>
   <property name="autoFillBackground">
    <bool>true</bool>
   </property>
+  <property name="dockOptions">
+   <set>QMainWindow::AllowTabbedDocks|QMainWindow::AnimatedDocks</set>
+  </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QVBoxLayout" name="verticalLayout_21">
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="tabPosition">
+       <enum>QTabWidget::North</enum>
+      </property>
+      <property name="tabShape">
+       <enum>QTabWidget::Rounded</enum>
+      </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>1</number>
+      </property>
+      <property name="elideMode">
+       <enum>Qt::ElideNone</enum>
+      </property>
+      <property name="documentMode">
+       <bool>false</bool>
+      </property>
+      <property name="tabsClosable">
+       <bool>false</bool>
+      </property>
+      <property name="movable">
+       <bool>false</bool>
       </property>
       <widget class="QWidget" name="tab_4">
        <attribute name="title">
@@ -90,10 +111,13 @@
               <property name="orientation">
                <enum>Qt::Vertical</enum>
               </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::MinimumExpanding</enum>
+              </property>
               <property name="sizeHint" stdset="0">
                <size>
                 <width>20</width>
-                <height>40</height>
+                <height>0</height>
                </size>
               </property>
              </spacer>
@@ -120,10 +144,13 @@
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::MinimumExpanding</enum>
+          </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
-            <height>335</height>
+            <height>0</height>
            </size>
           </property>
          </spacer>
@@ -158,6 +185,10 @@
        </layout>
       </widget>
       <widget class="QWidget" name="tab">
+       <attribute name="icon">
+        <iconset resource="resources.qrc">
+         <normaloff>:/images/settings.ico</normaloff>:/images/settings.ico</iconset>
+       </attribute>
        <attribute name="title">
         <string>OTP Slot Configuration</string>
        </attribute>
@@ -463,19 +494,6 @@
                </property>
               </widget>
              </item>
-             <item row="2" column="1">
-              <widget class="QSpinBox" name="intervalSpinBox">
-               <property name="minimum">
-                <number>1</number>
-               </property>
-               <property name="maximum">
-                <number>65536</number>
-               </property>
-               <property name="value">
-                <number>30</number>
-               </property>
-              </widget>
-             </item>
              <item row="3" column="0">
               <widget class="QLabel" name="label_5">
                <property name="text">
@@ -556,6 +574,36 @@
                   </widget>
                  </item>
                 </layout>
+               </item>
+              </layout>
+             </item>
+             <item row="2" column="1">
+              <layout class="QHBoxLayout" name="horizontalLayout_15">
+               <item>
+                <widget class="QSpinBox" name="intervalSpinBox">
+                 <property name="minimum">
+                  <number>1</number>
+                 </property>
+                 <property name="maximum">
+                  <number>65536</number>
+                 </property>
+                 <property name="value">
+                  <number>30</number>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <spacer name="horizontalSpacer_10">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
                </item>
               </layout>
              </item>
@@ -706,10 +754,13 @@
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::MinimumExpanding</enum>
+          </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
-            <height>40</height>
+            <height>0</height>
            </size>
           </property>
          </spacer>
@@ -758,6 +809,10 @@
        </layout>
       </widget>
       <widget class="QWidget" name="tab_2">
+       <attribute name="icon">
+        <iconset resource="resources.qrc">
+         <normaloff>:/images/settings.ico</normaloff>:/images/settings.ico</iconset>
+       </attribute>
        <attribute name="title">
         <string>OTP General Configuration</string>
        </attribute>
@@ -938,20 +993,28 @@
             </widget>
            </item>
            <item>
-            <layout class="QVBoxLayout" name="verticalLayout_3">
+            <layout class="QHBoxLayout" name="horizontalLayout_13">
              <item>
-              <layout class="QFormLayout" name="formLayout_2">
-               <property name="fieldGrowthPolicy">
-                <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-               </property>
-               <item row="0" column="0">
+              <layout class="QVBoxLayout" name="verticalLayout_20">
+               <item>
                 <widget class="QLabel" name="testsLabel">
                  <property name="text">
-                  <string>Number of tests</string>
+                  <string>Number of tests:</string>
                  </property>
                 </widget>
                </item>
-               <item row="0" column="1">
+               <item>
+                <widget class="QLabel" name="testsLabel_2">
+                 <property name="text">
+                  <string>HOTP counter:</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <layout class="QVBoxLayout" name="verticalLayout">
+               <item>
                 <widget class="QSpinBox" name="testsSpinBox">
                  <property name="minimum">
                   <number>1</number>
@@ -964,14 +1027,7 @@
                  </property>
                 </widget>
                </item>
-               <item row="1" column="0">
-                <widget class="QLabel" name="testsLabel_2">
-                 <property name="text">
-                  <string>HOTP counter</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="1">
+               <item>
                 <widget class="QSpinBox" name="testsSpinBox_2">
                  <property name="minimum">
                   <number>1</number>
@@ -986,6 +1042,23 @@
                </item>
               </layout>
              </item>
+             <item>
+              <spacer name="horizontalSpacer_9">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <layout class="QVBoxLayout" name="verticalLayout_3">
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_3">
                <item>
@@ -1027,10 +1100,13 @@
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::MinimumExpanding</enum>
+          </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
-            <height>40</height>
+            <height>0</height>
            </size>
           </property>
          </spacer>
@@ -1076,6 +1152,10 @@
        </layout>
       </widget>
       <widget class="QWidget" name="tab_3">
+       <attribute name="icon">
+        <iconset resource="resources.qrc">
+         <normaloff>:/images/safe2.ico</normaloff>:/images/safe2.ico</iconset>
+       </attribute>
        <attribute name="title">
         <string>Password Safe</string>
        </attribute>
@@ -1183,10 +1263,13 @@
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::MinimumExpanding</enum>
+          </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
-            <height>40</height>
+            <height>0</height>
            </size>
           </property>
          </spacer>
@@ -1245,7 +1328,60 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <tabstops>
+  <tabstop>tabWidget</tabstop>
+  <tabstop>pushButton_GotoTOTP</tabstop>
+  <tabstop>pushButton_GotoHOTP</tabstop>
+  <tabstop>pushButton_GotoGenOTP</tabstop>
+  <tabstop>pushButton_StaticPasswords</tabstop>
+  <tabstop>cancelButton_2</tabstop>
+  <tabstop>slotComboBox</tabstop>
+  <tabstop>eraseButton</tabstop>
+  <tabstop>nameEdit</tabstop>
+  <tabstop>secretEdit</tabstop>
+  <tabstop>checkBox</tabstop>
+  <tabstop>randomSecretButton</tabstop>
+  <tabstop>base32RadioButton</tabstop>
+  <tabstop>hexRadioButton</tabstop>
+  <tabstop>enterCheckBox</tabstop>
+  <tabstop>intervalSpinBox</tabstop>
+  <tabstop>digits6radioButton</tabstop>
+  <tabstop>digits8radioButton</tabstop>
+  <tabstop>counterEdit</tabstop>
+  <tabstop>setToZeroButton</tabstop>
+  <tabstop>setToRandomButton</tabstop>
+  <tabstop>tokenIDCheckBox</tabstop>
+  <tabstop>muiEdit</tabstop>
+  <tabstop>ompEdit</tabstop>
+  <tabstop>ttEdit</tabstop>
+  <tabstop>keyboardComboBox</tabstop>
+  <tabstop>cancelButton</tabstop>
+  <tabstop>writeButton</tabstop>
+  <tabstop>enableUserPasswordCheckBox</tabstop>
+  <tabstop>deleteUserPasswordCheckBox</tabstop>
+  <tabstop>numLockComboBox</tabstop>
+  <tabstop>capsLockComboBox</tabstop>
+  <tabstop>scrollLockComboBox</tabstop>
+  <tabstop>testsSpinBox</tabstop>
+  <tabstop>testsSpinBox_2</tabstop>
+  <tabstop>testHOTPButton</tabstop>
+  <tabstop>testTOTPButton</tabstop>
+  <tabstop>generalCancelButton</tabstop>
+  <tabstop>writeGeneralConfigButton</tabstop>
+  <tabstop>PWS_EditSlotName</tabstop>
+  <tabstop>PWS_EditLoginName</tabstop>
+  <tabstop>PWS_EditPassword</tabstop>
+  <tabstop>PWS_ButtonClearSlot</tabstop>
+  <tabstop>PWS_ComboBoxSelectSlot</tabstop>
+  <tabstop>PWS_ButtonCreatePW</tabstop>
+  <tabstop>PWS_CheckBoxHideSecret</tabstop>
+  <tabstop>PWS_ButtonEnable</tabstop>
+  <tabstop>PWS_ButtonClose</tabstop>
+  <tabstop>PWS_ButtonSaveSlot</tabstop>
+ </tabstops>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>cancelButton</sender>
