--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>779</width>
+    <width>720</width>
     <height>731</height>
    </rect>
   </property>
@@ -30,7 +30,7 @@
    <set>QMainWindow::AllowTabbedDocks|QMainWindow::AnimatedDocks</set>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QVBoxLayout" name="verticalLayout_21">
+   <layout class="QVBoxLayout" name="verticalLayout_23">
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="sizePolicy">
@@ -46,7 +46,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>1</number>
       </property>
       <property name="elideMode">
        <enum>Qt::ElideNone</enum>
@@ -67,6 +67,19 @@
        <layout class="QVBoxLayout" name="verticalLayout_17">
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_12">
+          <item>
+           <spacer name="horizontalSpacer_12">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_15">
             <item>
@@ -883,87 +896,105 @@
             </widget>
            </item>
            <item>
-            <layout class="QFormLayout" name="formLayout">
-             <property name="fieldGrowthPolicy">
-              <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-             </property>
-             <item row="1" column="0">
-              <widget class="QLabel" name="label_13">
-               <property name="text">
-                <string>Double press NumLock:</string>
+            <layout class="QHBoxLayout" name="horizontalLayout_16">
+             <item>
+              <layout class="QVBoxLayout" name="verticalLayout_21">
+               <item>
+                <widget class="QLabel" name="label_13">
+                 <property name="text">
+                  <string>Double press NumLock:</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLabel" name="label_14">
+                 <property name="text">
+                  <string>Double press CapsLock:</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLabel" name="label_15">
+                 <property name="text">
+                  <string>Double press ScrollLock:</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <layout class="QVBoxLayout" name="verticalLayout_22">
+               <item>
+                <widget class="QComboBox" name="numLockComboBox">
+                 <item>
+                  <property name="text">
+                   <string>Do nothing</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>Send HOTP1</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>Send HOTP2</string>
+                  </property>
+                 </item>
+                </widget>
+               </item>
+               <item>
+                <widget class="QComboBox" name="capsLockComboBox">
+                 <item>
+                  <property name="text">
+                   <string>Do nothing</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>Send HOTP1</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>Send HOTP2</string>
+                  </property>
+                 </item>
+                </widget>
+               </item>
+               <item>
+                <widget class="QComboBox" name="scrollLockComboBox">
+                 <item>
+                  <property name="text">
+                   <string>Do nothing</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>Send HOTP1</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>Send HOTP2</string>
+                  </property>
+                 </item>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_11">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
                </property>
-              </widget>
-             </item>
-             <item row="1" column="1">
-              <widget class="QComboBox" name="numLockComboBox">
-               <item>
-                <property name="text">
-                 <string>Do nothing</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>Send HOTP1</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>Send HOTP2</string>
-                </property>
-               </item>
-              </widget>
-             </item>
-             <item row="2" column="0">
-              <widget class="QLabel" name="label_14">
-               <property name="text">
-                <string>Double press CapsLock:</string>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
                </property>
-              </widget>
-             </item>
-             <item row="2" column="1">
-              <widget class="QComboBox" name="capsLockComboBox">
-               <item>
-                <property name="text">
-                 <string>Do nothing</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>Send HOTP1</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>Send HOTP2</string>
-                </property>
-               </item>
-              </widget>
-             </item>
-             <item row="3" column="0">
-              <widget class="QLabel" name="label_15">
-               <property name="text">
-                <string>Double press ScrollLock:</string>
-               </property>
-              </widget>
-             </item>
-             <item row="3" column="1">
-              <widget class="QComboBox" name="scrollLockComboBox">
-               <item>
-                <property name="text">
-                 <string>Do nothing</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>Send HOTP1</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>Send HOTP2</string>
-                </property>
-               </item>
-              </widget>
+              </spacer>
              </item>
             </layout>
            </item>
@@ -1359,9 +1390,6 @@
   <tabstop>writeButton</tabstop>
   <tabstop>enableUserPasswordCheckBox</tabstop>
   <tabstop>deleteUserPasswordCheckBox</tabstop>
-  <tabstop>numLockComboBox</tabstop>
-  <tabstop>capsLockComboBox</tabstop>
-  <tabstop>scrollLockComboBox</tabstop>
   <tabstop>testsSpinBox</tabstop>
   <tabstop>testsSpinBox_2</tabstop>
   <tabstop>testHOTPButton</tabstop>
