--- a/stick20hiddenvolumedialog.ui
+++ b/stick20hiddenvolumedialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>315</width>
-    <height>235</height>
+    <width>296</width>
+    <height>370</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -23,7 +23,7 @@
    <iconset resource="resources.qrc">
     <normaloff>:/images/CS_icon.png</normaloff>:/images/CS_icon.png</iconset>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QVBoxLayout" name="verticalLayout_4">
    <item>
     <widget class="QFrame" name="frame">
      <property name="sizePolicy">
@@ -38,10 +38,10 @@
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
+     <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <layout class="QFormLayout" name="formLayout">
-        <item row="0" column="0">
+       <layout class="QVBoxLayout" name="verticalLayout_3">
+        <item>
          <widget class="QComboBox" name="comboBox">
           <item>
            <property name="text">
@@ -65,17 +65,27 @@
           </item>
          </widget>
         </item>
+        <item>
+         <widget class="QLabel" name="HVSdCardHighWaterMark">
+          <property name="text">
+           <string>High water mark</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QFormLayout" name="formLayout">
+        <property name="fieldGrowthPolicy">
+         <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+        </property>
         <item row="1" column="0">
          <widget class="QLabel" name="label_2">
           <property name="text">
            <string>Start at % of SD size:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="QLabel" name="label_3">
-          <property name="text">
-           <string>End at % of SD size:</string>
           </property>
          </widget>
         </item>
@@ -102,6 +112,13 @@
            </spacer>
           </item>
          </layout>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>End at % of SD size:</string>
+          </property>
+         </widget>
         </item>
         <item row="2" column="1">
          <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -134,7 +151,7 @@
         <item row="0" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>Password</string>
+           <string>Password:</string>
           </property>
          </widget>
         </item>
@@ -148,10 +165,52 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="2" column="1">
          <widget class="QCheckBox" name="ShowPasswordCheckBox">
           <property name="text">
            <string>Show password</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="HVPasswordEdit_2">
+          <property name="focusPolicy">
+           <enum>Qt::TabFocus</enum>
+          </property>
+          <property name="echoMode">
+           <enum>QLineEdit::Password</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>Password:</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="QLabel" name="HVEntropieLabel">
+          <property name="text">
+           <string>Entropy guess:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="HVEntropieRandChars">
+          <property name="text">
+           <string> bits for random chars</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="HVEntropieRealWords">
+          <property name="text">
+           <string> for real words</string>
           </property>
          </widget>
         </item>
@@ -191,9 +250,7 @@
  </widget>
  <tabstops>
   <tabstop>HVPasswordEdit</tabstop>
-  <tabstop>HVPasswordEdit_2</tabstop>
   <tabstop>ShowPasswordCheckBox</tabstop>
-  <tabstop>comboBox</tabstop>
   <tabstop>StartBlockSpin</tabstop>
   <tabstop>EndBlockSpin</tabstop>
  </tabstops>
